Enhance backend and frontend with improved configuration, error handling, and UI updates
- Added DATABASE_URL to .env.example for database connection
- Updated Dockerfile comments for clarity
- Enhanced schema.prisma with additional comments
- Improved app.module.ts and main.ts with descriptive comments
- Refined prisma.service.ts for better connection handling
- Updated reset.controller.ts and songs.controller.ts with clearer comments
- Enhanced songs.service.ts with detailed comments and improved CSV import logic
- Updated App.css for better styling and responsiveness
- Improved App.tsx with better error handling and user experience features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,6 @@
+
+# Copy this file to .env and fill in your local configuration values.
+# Used for backend server port and database connection.
+
 DATABASE_URL="postgresql://postgres@localhost:5432/thing_or_two?schema=public"
 PORT=3000
